# suse-support-material-local

.github/workflows/: docker-build-ketchup.yaml  ketchup-code-checks.yaml
ketchup/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
ketchup/src/: k8s.rs  main.rs  output.rs
ketchupv1/: README.md
ketchupv1/src/: k8s.rs  output.rs
