[package]
name = "ketchup"
version = "2.0.0"
edition = "2021"
authors = ["George Agriogiannis <george.agriogiannis2@suse.com>"]
description = "A tool to collect Kubernetes cluster configurations"

[dependencies]
# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# K8s 
kube = "2.0.0" 
k8s-openapi = { version = "0.26", features = ["v1_30"] }


# Error handling
anyhow = "1.0"

# Archive creation
tar = "0.4"
flate2 = "1.0"

# Date/time for timestamping
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
